src/test/ui/rfc-2632-const-trait-impl/staged-api.staged.stderr
error: trait methods cannot be stable const fn
  --> $DIR/staged-api.rs:22:5
   |
LL | /     fn func() {
LL | |
LL | |     }
   | |_____^

error: aborting due to previous error

